# jmapfe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml  test.yml
apps/android/: README.md
apps/desktop-electron/: README.md
apps/desktop-tauri/: package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
apps/web/: app.json  index.ts  metro.config.js  package.json
apps/web/android/: settings.gradle
apps/web/android/app/: build.gradle
apps/web/android/app/src/main/: AndroidManifest.xml
apps/web/android/app/src/main/java/app/jmapfe/: MainActivity.kt  MainApplication.kt
apps/web/android/app/src/main/res/values/: strings.xml
apps/web/src/: App.tsx  layoutConstants.ts  styles.ts  theme.ts
apps/web/src/backend/: appStorage.ts  attachments.ts  binary.ts  emailHtml.ts  index.ts  jmapMail.ts  mailModel.ts  mailState.ts  runtime.ts  vault.ts
apps/web/src/components/: index.ts  layout.tsx  primitives.tsx
apps/web/src/components/app/: AccountSetupFlow.tsx  Settings.tsx  Toolbar.tsx  UIShell.tsx  VaultUnlock.tsx  index.ts
apps/web/src/components/mail/: ComposePane.tsx  EmptyThreadList.tsx  FlagButton.tsx  FolderPane.tsx  MailWorkspace.tsx  MessageContextMenu.tsx  MessageList.tsx  MessagePreview.tsx  SearchStatusLine.tsx  index.ts  mailUi.ts
scripts/: android-build.mjs  native-dev.mjs  patch-expo-web-dist.mjs  tauri-build.mjs
