[package]
name = "jmapfe_desktop"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "4.0.0"
keyring-core = "1.0.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
